# vctsdb

./: Cargo.toml  LICENSE  prompt_plan.md  spec.md  todo.md
src/: lib.rs  main.rs  metrics.rs
src/ingestion/: formats.rs  mod.rs  parser.rs  registry.rs  validation.rs
src/query/: executor.rs  mod.rs  planner.rs
src/query/parser/: ast.rs  lexer.rs  mod.rs  validator.rs
src/storage/: data.rs  index.rs  mod.rs  wal.rs
src/storage/lsm/: catalog.rs  flush.rs  memtable.rs  mod.rs  query.rs  sstable.rs
tests/: test_storage.rs
