[package]
name = "vctsdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
csv = "1.3.0"
crc = "3.0.1"
tempfile = "3.10.0"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4"
